Added withMissing method as opposite to override. Simplified validateParameters. Added method pointTests to pass test directory. Changed srcPaths to List. Simplified generate's inner logic.